<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="39dp"
        android:textSize="25sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/gallery_greeting"
        android:id="@+id/greeting"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/greeting"
        android:textSize="25sp"
        android:textColor="@color/darkOrange"
        android:text="@string/title_last_time"
        android:id="@+id/last_time"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/last_time"
        android:textSize="25sp"
        android:textColor="@color/darkOrange"
        android:text="@string/last_host"
        android:id="@+id/last_ipv4"/>
    
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/last_ipv4"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/btn_ready"
        android:id="@+id/btn_submit_infor"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_time"
        android:textSize="20sp"
        android:layout_toEndOf="@+id/last_time"
        android:layout_below="@+id/greeting"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:textColor="@color/leafColorDeep"
        android:id="@+id/time_output"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_ipv4"
        android:textSize="20sp"
        android:textColor="@color/leafColorDeep"
        android:id="@+id/addr_output"
        android:layout_below="@id/last_time"
        android:layout_toEndOf="@+id/last_ipv4"
        android:layout_marginTop="13dp"
        android:layout_marginStart="23dp"/>

</RelativeLayout>