<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorLeave">
    <EditText
        android:id="@+id/edit_name1"
        android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_name1"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/normalInputColor"/>
    <requestFocus/>

    <EditText
        android:id="@+id/edit_name2"
        android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_name2"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/normalInputColor"/>

    <EditText
        android:id="@+id/edit_title"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_title"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/normalInputColor"/>

    <EditText
        android:id="@+id/edit_email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/normalInputColor"/>



</LinearLayout>